--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chartist": "^0.11.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-clickaway": "^2.2.2",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.4.9"
   },
@@ -19,6 +20,7 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "es6-promise": "^4.2.8",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
